<resources>
    <string name="app_name">Taskit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Errors-->
    <string name="empty_email_error">Email is required</string>
    <string name="invalid_email_error">Please provide valid email</string>
    <string name="empty_password_error">Password is required</string>
    <string name="short_password_error">Password should be at least 6 characters</string>
    <string name="login_fail_error">Failed to log in</string>
    <string name="something_wrong_error_text">Try again, something went wrong!</string>
    <string name="empty_full_name_error">Full name is required</string>
    <string name="empty_phone_number_error">Phone number is required</string>
    <string name="invalid_phone_number_error">Please provide valid phone</string>
    <string name="general_error">ERROR</string>
    <string name="empty_field_error">You can\'t leave this field empty</string>

    <!--    Auth Flow-->
    <string name="task_app_banner_text">Taskit</string>
    <string name="email_address_edit_text_hint">Email Address</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="register_button_text">Register</string>
    <string name="reset_password_button_text">Reset Password</string>
    <string name="full_name_edit_text_hint">Full Name</string>
    <string name="phone_number_edit_text_hint">Phone Number</string>
    <string name="register_user_button_text">Register User</string>
    <string name="check_email_for_password_reset_text">Check your email to reset your password</string>
    <string name="user_was_created_text">User was created</string>

    <!--    My Tasks Flow-->
    <string name="create_task_header_text">Create Task</string>
    <string name="create_task_title_edit_text_hint">Title</string>
    <string name="create_task_description_edit_text_hint">Description</string>
    <string name="create_task_price_edit_text_hint">Price</string>
    <string name="create_task_secret_data_edit_text_hint">Confidential</string>
    <string name="create_task_secret_data_edit_text_helper">This text will only appear to the tasker</string>
    <string name="create_task_action_button_text">Create Task</string>
    <string name="create_task_success_text">Task was created</string>
    <string name="my_tasks_in_progress">In Progress</string>
    <string name="my_tasks_your_created">Your Created</string>
    <string name="my_tasks_archive">Archive: Your Completed</string>
    <string name="my_tasks_archive_your_created">Archive: Your Created</string>


    <!--    User Page Flow-->
    <string name="user_page_email_text">Email: %1$s</string>
    <string name="user_page_phone_text">Phone: %1$s</string>
    <string name="user_page_review_text">%1$d Reviews</string>
    <string name="user_page_log_out_button_text">Log Out</string>
    <string name="user_page_reviews_header_text">Reviews:</string>

    <!--    Search Page Flow-->
    <string name="task_page_user_is_working">This user is working on your Task!</string>
    <string name="task_page_you_finished_task">You finished this user\'s Task!</string>
    <string name="task_page_user_finished_task">This user finished your Task!</string>
    <string name="task_page_you_sent_offer">You\'ve already sent an offer!</string>
    <string name="task_page_offer_button_text">Offer To Do The Task</string>
    <string name="search_task_adapter_gel_text">%1$s ₾</string>
    <string name="task_page_review_button_text">Review Tasker!</string>
    <string name="task_page_finish_button_text">Finish!</string>
    <string name="task_page_withdraw_offer_button_text">Withdraw Offer</string>
    <string name="my_created_tasks_page_delete_confirmation_text">Are you sure you want to Delete this Task?</string>

    <string name="language_button_text">Lan</string>
    <string name="general_yes_text">Yes</string>
    <string name="general_no_text">No</string>

    <string name="label_menu_search">Search</string>
    <string name="label_menu_tasks">Tasks</string>
    <string name="label_menu_profile">Profile</string>

</resources>