<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/task_constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_l"
            android:background="@drawable/search_task_card_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_m"
                android:layout_marginTop="@dimen/spacing_m"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/price_textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="სათაური" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_m"
                android:layout_marginStart="@dimen/spacing_m"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_m"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                tools:layout_height="200dp"
                tools:text="აღწერა" />

            <TextView
                android:id="@+id/price_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_m"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/title_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/title_text_view"
                tools:text="20 $" />

            <TextView
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:layout_marginEnd="@dimen/spacing_m"
                android:layout_marginBottom="@dimen/spacing_m"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_text_view"
                tools:text="10/12/2012" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:background="@drawable/search_view_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_constraintLayout">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_picture_image_view"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginVertical="@dimen/spacing_m"
                android:layout_marginStart="@dimen/spacing_m"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:srcCompat="@drawable/profile_photo"
                app:strokeColor="?attr/colorPrimary"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/employer_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_l"
                app:layout_constraintBottom_toTopOf="@+id/rating_bar"
                app:layout_constraintStart_toEndOf="@+id/profile_picture_image_view"
                app:layout_constraintTop_toTopOf="@id/profile_picture_image_view"
                tools:text="სახელი" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="?attr/colorPrimary"
                android:stepSize="0.1"
                app:layout_constraintBottom_toBottomOf="@+id/profile_picture_image_view"
                app:layout_constraintStart_toStartOf="@+id/employer_name_textView"
                app:layout_constraintTop_toBottomOf="@+id/employer_name_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/offer_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:text="@string/task_page_offer_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:tint="@color/white"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_constraintLayout" />

        <Button
            android:id="@+id/withdraw_offer_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:backgroundTint="@color/color_negative"
            android:text="@string/task_page_withdraw_offer_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:tint="@color/white"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_remove_circle_outline_24"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_constraintLayout" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:text="@string/task_page_finish_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_constraintLayout" />

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_constraintLayout"
            tools:text="@string/create_task_header_text" />

        <Button
            android:id="@+id/review_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:text="@string/task_page_review_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text_view" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>