<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.userpage.UserPageFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/language_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginEnd="@dimen/spacing_m"
            android:minWidth="0dp"
            android:text="@string/language_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_language_24"
            app:iconPadding="0dp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginEnd="@dimen/spacing_s" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture_image_view"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/spacing_l"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/profile_photo"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/full_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_s"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_image_view"
            tools:text="full name" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name_text_view" />

        <TextView
            android:id="@+id/num_reviews_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_m"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rating_bar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            tools:text="Tasks: 12" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_l"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="?attr/colorPrimary"
            android:stepSize="0.1"
            app:layout_constraintBottom_toBottomOf="@+id/num_reviews_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/num_reviews_text_view"
            app:layout_constraintTop_toTopOf="@+id/num_reviews_text_view" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/num_reviews_text_view" />

        <LinearLayout
            android:id="@+id/user_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_m"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/logout_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1">

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Email: nchan17@gmail.com" />

            <TextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Phone Number: 598258899" />
        </LinearLayout>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_m"
            android:backgroundTint="@color/color_negative"
            android:text="@string/user_page_log_out_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_info_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_info_layout"
            app:layout_constraintTop_toTopOf="@+id/user_info_layout" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_m"
            android:layout_marginEnd="@dimen/spacing_m"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_info_layout" />

        <TextView
            android:id="@+id/review_header_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_l"
            android:layout_marginTop="@dimen/spacing_s"
            android:gravity="center"
            android:text="@string/user_page_reviews_header_text"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_header_text_view" />

        <ProgressBar
            android:id="@+id/recycler_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>